# cmake_simulink_mex

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  example_model.slx  singleExample_model.slx
cmake/: matlab.cmake
mex/: CMakeLists.txt  TestMex.m  example.c  singleExample.c  test.c  timesThree.c
